Implemented update password function
