# backend/generated-server/api/openapi.yaml
@@ -76,6 +76,31 @@ paths:
       summary: Get current authenticated user's information
       tags:
       - Auth
+  /users/me/password:
+    put:
+      operationId: updateUserPassword
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdatePasswordRequest'
+        required: true
+      responses:
+        "204":
+          description: Password updated successfully
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Unauthorized - Incorrect current password
+      security:
+      - bearerAuth: []
+      summary: Update current user's password
+      tags:
+      - Users
   /users/me/avatar:
     delete:
       operationId: deleteUserAvatar
@@ -696,6 +721,20 @@ components:
       required:
       - email
       - password
+    UpdatePasswordRequest:
+      example:
+        newPassword: newPassword
+        currentPassword: currentPassword
+      properties:
+        currentPassword:
+          format: password
+          type: string
+        newPassword:
+          format: password
+          type: string
+      required:
+      - currentPassword
+      - newPassword
     UpdateAvatarRequest:
       example:
         avatarUrl: https://openapi-generator.tech
