# backend/generated-server/go/model_update_password_request.go
@@ -1,0 +1,17 @@
+/*
+ * Kotobalize API
+ *
+ * API for the Kotobalize technical interview preparation app.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type UpdatePasswordRequest struct {
+
+	CurrentPassword string `json:"currentPassword"`
+
+	NewPassword string `json:"newPassword"`
+}
