# backend/generated-server/main.go
@@ -89,6 +89,7 @@ func main() {
 
 			protected.PUT("/users/me/avatar", c.UpdateUserAvatar)
 			protected.DELETE("/users/me/avatar", c.DeleteUserAvatar)
+			protected.PUT("/users/me/password", c.UpdateUserPassword)
 			protected.POST("/users/me/avatar/upload-url", c.GetAvatarUploadURL)
 
 			protected.GET("/themes", c.ListThemes)
