# backend/generated-server/models/model_update_password_request.go
@@ -1,0 +1,7 @@
+package models
+
+// UpdatePasswordRequest model
+type UpdatePasswordRequest struct {
+	CurrentPassword string `json:"currentPassword"`
+	NewPassword     string `json:"newPassword"`
+}
